quick patch gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,27 @@ lit/*
 slides/*
 R/old/*
 R/intermediate_code/*
-fig/CCES/rf/*_senate_*
-fig/CCES/rf/*_house_*
+R/shell/*
+
+fig/ANES/*senate*
+fig/ANES/*house*
+fig/ANES/*approval*
+fig/ANES/rf/*senate*
+fig/ANES/rf/*house*
+fig/ANES/rf/*approval*
+fig/CCES/*senate*
+fig/CCES/*house*
+fig/CCES/*approval*
+fig/CCES/rf/*senate*
+fig/CCES/rf/*house*
 fig/CCES/rf/*approval*
 fig/*/old/*
+
+tab/*senate*
+tab/*house*
+tab/*approval*
 tab/old/*
+
 *varrf*
 *varcart*
 *varlogit*
