--- a/.gitignore
+++ b/.gitignore
@@ -50,19 +50,7 @@ data/anes/*
 data/cces/*
 data/nationscape/*
 
-fig/ANES/*senate*
-fig/ANES/*house*
-fig/ANES/*approval*
-fig/ANES/rf/*senate*
-fig/ANES/rf/*house*
-fig/ANES/rf/*approval*
-fig/CCES/*senate*
-fig/CCES/*house*
-fig/CCES/*approval*
-fig/CCES/rf/*senate*
-fig/CCES/rf/*house*
-fig/CCES/rf/*approval*
-fig/*/old/*
+fig/ANES/*
 
 tab/*senate*
 tab/*house*
